v0.04 to be released
    make compatible to newer Padre versions (ZENOG)
    more informative README (ZENOG)

v0.03 2010.07.12
    Use mimetype instead of get_mimetype (Alexandr Ciornii)

v0.02 2009.09.18
    Fix to allow PHP highlighting as well

v0.01 2009.07.23
    First version released to the already suspicious world.
